# mppi_mobile_manipulation

mppi/: CMakeLists.txt  package.xml
mppi/include/mppi/dynamics/: dynamics_base.h
mppi_pinocchio/: CMakeLists.txt  package.xml
mppi_pinocchio/include/mppi_pinocchio/: ros_conversions.h
mppi_ros/: CMakeLists.txt  package.xml
mppi_ros/include/mppi_ros/: controller_interface.h  conversions.h  ros_params.h
mppi_ros/msg/: Data.msg
mppi_ros/src/: controller_interface.cpp  conversions.cpp
