<?xml version="1.0"?>
<package format="3">
    <name>mppi_ros</name>
    <version>0.1.0</version>
    <description>mppi_ros package</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>mppi</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>mppi_ros_interfaces</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

<!--     <depend>rosbag</depend>
    <depend>message_generation</depend>

    <exec_depend>message_runtime</exec_depend> -->
</package>
